@@ -84,13 +84,16 @@ all fields are populated except for
 .BR fd .
 With 
 .BR odccm (1)
-only 
-.BR name,
-.BR os_version,
-.BR transport
+and
+.BR synce-hal,
+.BR dccm_pid,
+.BR password,
+.BR key,
+.BR build_number,
+.BR partner_id_1
 and 
-.BR fd
-are used.
+.BR partner_id_2
+are not used.
 .SH "RETURN VALUE"
 The
 .BR synce_info_new ()
